# travel-assistant-rag

./: .dockerignore  .env  .env.example  .gitignore  ASSIGNMENT_COMPLETION_REPORT.md  Dockerfile  QUICKSTART.md  README.md  REQUIREMENTS_CHECKLIST.md  SUBMISSION_CHECKLIST.md  docker-compose.yml  main.py  nohup.out  pyproject.toml  requirements.txt  test.py  verify.py
logs/: .gitkeep
scripts/: seed_data.py  setup_qdrant.py
src/: __init__.py
src/agents/: graph.py  nodes.py  state.py
src/api/: main.py
src/api/middleware/: error_handler.py  logging_middleware.py
src/api/routes/: health.py  rag.py
src/config/: settings.py
src/core/: exceptions.py  logging.py  utils.py
src/data/: __init__.py  travel_documents.py
src/models/: domain.py  schemas.py
src/services/: embedding_service.py  llm_service.py  qdrant_service.py  rag_service.py  search_service.py
src/ui/: gradio_app.py  gradio_app_backup.py  gradio_app_broken.py  gradio_app_compatible.py  gradio_app_fixed.py  gradio_app_old.py  gradio_app_previous.py  gradio_app_simple_clean.py  gradio_app_working.py
